--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 #game {
     width: 100vw;
     height: 100vh;
-    background: #55FF55; /* Retro green */
+    background: #000000;
     position: relative;
     font-family: 'VT323', monospace; /* Fallback to monospace */
     color: #000;
@@ -31,7 +31,7 @@ body {
     height: 400px;
     background: url('assets/space-00.jpg') no-repeat center/cover;
     border: 4px solid #55FF55;
-    border-radius: 20px;
+    border-radius: 12px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -57,11 +57,13 @@ body {
 
 #title {
     font-size: 48px;
+    color: #55FF55;
     margin: 20px 0;
 }
 
 #stats-background {
-    width: 350px;
+    border: 2px solid #55FF55;
+    width: 100%;
     height: 60px;
     background: rgba(0, 0, 0, 0.7);
     position: absolute;
@@ -71,6 +73,7 @@ body {
 
 #stats {
     font-size: 24px;
+    color: #55FF55;
     position: absolute;
     top: 85px;
     left: 25px;
@@ -78,16 +81,18 @@ body {
 }
 
 #event-area {
+    border: 4px solid #55FF55;
+    border-radius: 12px;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 600px;
+    top: 75%;
+    left: 75%;
+    transform: translate(-75%, -75%);
+    width: 800px;
     text-align: center;
 }
 
 #event-background {
-    width: 600px;
+    width: 800px;
     height: 200px;
     background: rgba(0, 0, 0, 0.7);
     position: absolute;
@@ -97,6 +102,7 @@ body {
 
 #event-text {
     font-size: 32px;
+    color: #55FF55;
     margin: 0;
     position: relative;
     top: -50px;
