--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ body {
 
 #crew-area {
     width: 200px;
-    height: 100%;
+    height: 800px;
     border: 2px solid #55FF55;
     position: absolute;
     right: 0;
