--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
     top: 288px;
     left: 50%;
     transform: translate(-50%, -50%);
-    box-shadow: 0 0 3px #55FF55; /* Glowing shadow */
+    box-shadow: 0 0 10px #55FF55; /* Glowing shadow */
 }
 
 #ship {
@@ -60,30 +60,10 @@ body {
     font-size: 48px;
     color: #55FF55;
     margin: 20px 0;
-}
-
-#stats-background {
-    width: 350px;
-    height: 60px;
-    background: rgba(0, 0, 0, 0.7);
-    border: 2px solid #55FF55;
-    position: absolute;
-    top: 80px;
-    left: 20px;
-    box-shadow: 0 0 3px #55FF55; /* Glowing shadow */
-}
-
-#stats {
-    font-size: 24px;
-    color: #55FF55;
-    position: absolute;
-    top: 85px;
-    left: 25px;
-    text-align: left;
-}
 
 #event-area {
     width: 600px;
+    height: 200px;
     border: 4px solid #55FF55;
     position: absolute;
     top: 708px;
@@ -140,6 +120,38 @@ body {
     color: #000;
 }
 
+#status-area {
+    width: 200px;
+    height: 800px;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+#status-background {
+    width: 200px;
+    height: 800px;
+    background: rgba(0, 0, 0, 0.7);
+    box-shadow: 0 0 10px #55FF55;
+}
+
+#status-title {
+    font-size: 32px;
+    color: #55FF55;
+    margin: 2px 0;
+    text-align: center;
+}
+
+#status-list {
+    font-size: 24px;
+    color: #55FF55;
+    padding: 0 1px;
+}
+
+.status-item {
+    margin: 1px 0;
+}
+
 #crew-area {
     width: 200px;
     height: 800px;
@@ -150,8 +162,8 @@ body {
 }
 
 #crew-background {
-    width: 100%;
-    height: 100%;
+    width: 200px;
+    height: 800px;
     background: rgba(0, 0, 0, 0.7);
     box-shadow: 0 0 3px #55FF55; /* Glowing shadow */
 }
