--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 #game {
     width: 100vw;
     height: 100vh;
-    background: #000000;
+    background: #55FF55; /* Retro green */
     position: relative;
     font-family: 'VT323', monospace;
     color: #000;
@@ -30,11 +30,12 @@ body {
     height: 400px;
     background: url('assets/space-00.jpg') no-repeat center/cover;
     border: 4px solid #55FF55;
+    border-radius: 20px;
     position: absolute;
-    top: 288px;
+    top: 280px; /* ~200px below title */
     left: 50%;
-    transform: translate(-50%, -50%);
-    box-shadow: 0 0 10px #55FF55; /* Glowing shadow */
+    transform: translateX(-50%);
+    box-shadow: 0 0 10px #55FF55;
 }
 
 #ship {
@@ -60,13 +61,31 @@ body {
     font-size: 48px;
     color: #55FF55;
     margin: 20px 0;
+}
+
+#stats-background {
+    width: 350px;
+    height: 60px;
+    background: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    top: 80px;
+    left: 20px;
+    box-shadow: 0 0 10px #55FF55;
+}
+
+#stats {
+    font-size: 24px;
+    color: #55FF55;
+    position: absolute;
+    top: 85px;
+    left: 25px;
+    text-align: left;
+}
 
 #event-area {
     width: 600px;
-    height: 200px;
-    border: 4px solid #55FF55;
     position: absolute;
-    top: 708px;
+    top: 700px; /* Below image box */
     left: 50%;
     transform: translateX(-50%);
     text-align: center;
@@ -79,7 +98,7 @@ body {
     position: absolute;
     top: -100px;
     left: 0;
-    box-shadow: 0 0 3px #55FF55; /* Glowing shadow */
+    box-shadow: 0 0 10px #55FF55;
 }
 
 #event-text {
@@ -87,10 +106,10 @@ body {
     color: #55FF55;
     margin: 0;
     position: relative;
-    top: -50px;
+    top: -40px;
     max-height: 100px;
     overflow-wrap: break-word;
-    padding: 10px;
+    padding: 15px;
 }
 
 #choices {
@@ -122,56 +141,65 @@ body {
 
 #status-area {
     width: 200px;
-    height: 800px;
+    height: 100%;
     position: absolute;
     left: 0;
     top: 0;
 }
 
 #status-background {
-    width: 200px;
-    height: 800px;
+    width: 100%;
+    height: 100%;
     background: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    top: 0;
+    bottom: 0;
     box-shadow: 0 0 10px #55FF55;
 }
 
 #status-title {
     font-size: 32px;
     color: #55FF55;
-    margin: 2px 0;
+    margin: 20px 0;
     text-align: center;
+    position: relative;
 }
 
 #status-list {
     font-size: 24px;
     color: #55FF55;
-    padding: 0 1px;
+    padding: 10px;
+    max-height: calc(100% - 60px);
+    overflow-y: auto;
+    position: relative;
 }
 
 .status-item {
-    margin: 1px 0;
+    margin: 5px 0;
 }
 
 #crew-area {
     width: 200px;
-    height: 800px;
-    border: 2px solid #55FF55;
+    height: 100%;
     position: absolute;
     right: 0;
     top: 0;
 }
 
 #crew-background {
-    width: 200px;
-    height: 800px;
+    width: 100%;
+    height: 100%;
     background: rgba(0, 0, 0, 0.7);
-    box-shadow: 0 0 3px #55FF55; /* Glowing shadow */
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    box-shadow: 0 0 10px #55FF55;
 }
 
 #crew-title {
     font-size: 32px;
     color: #55FF55;
-    margin: 2px 0;
+    margin: 20px 0;
     text-align: center;
     position: relative;
 }
@@ -179,24 +207,26 @@ body {
 #crew-list {
     font-size: 24px;
     color: #55FF55;
-    padding: 0 1px;
-    max-height: calc(100vh - 80px); 
+    padding: 10px;
+    max-height: calc(100% - 60px);
     overflow-y: auto;
     position: relative;
 }
 
 .crew-member {
-    margin: 1px 0;
+    margin: 5px 0;
     display: flex;
     align-items: center;
 }
 
 .crew-member span {
-    margin-right: 1px;
+    margin-right: 10px;
 }
 
 .condition-icon, .mood-icon {
     width: 24px;
     height: 24px;
+    margin-left: 5px;
+}
     margin-left: 5px;
 }
