--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 #game {
     width: 100vw;
     height: 100vh;
-    background: #55FF55; /* Retro green */
+    background: #000000;
     position: relative;
     font-family: 'VT323', monospace;
     color: #000;
