--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 #game {
     width: 100vw;
     height: 100vh;
-    background: #000000;
+    background: #000000; /* Black background */
     position: relative;
     font-family: 'VT323', monospace;
     color: #000;
@@ -32,7 +32,7 @@ body {
     border: 4px solid #55FF55;
     border-radius: 20px;
     position: absolute;
-    top: 280px; /* ~200px below title */
+    top: 280px;
     left: 50%;
     transform: translateX(-50%);
     box-shadow: 0 0 10px #55FF55;
@@ -63,29 +63,10 @@ body {
     margin: 20px 0;
 }
 
-#stats-background {
-    width: 350px;
-    height: 60px;
-    background: rgba(0, 0, 0, 0.7);
-    position: absolute;
-    top: 80px;
-    left: 20px;
-    box-shadow: 0 0 10px #55FF55;
-}
-
-#stats {
-    font-size: 24px;
-    color: #55FF55;
-    position: absolute;
-    top: 85px;
-    left: 25px;
-    text-align: left;
-}
-
 #event-area {
     width: 600px;
     position: absolute;
-    top: 700px; /* Below image box */
+    top: 700px;
     left: 50%;
     transform: translateX(-50%);
     text-align: center;
@@ -226,7 +207,5 @@ body {
 .condition-icon, .mood-icon {
     width: 24px;
     height: 24px;
-    margin-left: 5px;
-}
     margin-left: 5px;
 }
