--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ body {
     font-size: 48px;
     color: #55FF55;
     margin: 20px 0;
+    text-shadow: 0 0 5px #55FF55; /* Text glow */
 }
 
 #event-area {
@@ -91,6 +92,7 @@ body {
     max-height: 100px;
     overflow-wrap: break-word;
     padding: 15px;
+    text-shadow: 0 0 5px #55FF55; /* Text glow */
 }
 
 #choices {
@@ -113,6 +115,7 @@ body {
     position: relative;
     left: 50%;
     transform: translateX(-50%);
+    text-shadow: 0 0 5px #55FF55; /* Text glow */
 }
 
 .choice-button:hover {
@@ -144,6 +147,7 @@ body {
     margin: 20px 0;
     text-align: center;
     position: relative;
+    text-shadow: 0 0 5px #55FF55; /* Text glow */
 }
 
 #status-list {
@@ -153,6 +157,7 @@ body {
     max-height: calc(100% - 60px);
     overflow-y: auto;
     position: relative;
+    text-shadow: 0 0 5px #55FF55; /* Text glow */
 }
 
 .status-item {
@@ -183,6 +188,7 @@ body {
     margin: 20px 0;
     text-align: center;
     position: relative;
+    text-shadow: 0 0 5px #55FF55; /* Text glow */
 }
 
 #crew-list {
@@ -192,6 +198,7 @@ body {
     max-height: calc(100% - 60px);
     overflow-y: auto;
     position: relative;
+    text-shadow: 0 0 5px #55FF55; /* Text glow */
 }
 
 .crew-member {
