--- a/style.css
+++ b/style.css
@@ -399,7 +399,7 @@ body {
 
     #status-area {
         grid-column: 1 / 2;
-        grid-row: 2 / 3;
+        grid-row: 2 / 2;
         width: 100%;
         height: auto;
         min-height: 150px;
@@ -409,10 +409,10 @@ body {
     }
 
     #image-box {
-        grid-column: 2 / 3;
+        grid-column: 2 / 2;
         grid-row: 1 / 2;
         width: 100%;
-        height: 50vh;
+        height: auto;
         min-height: 150px;
         border: 2px solid #55FF55;
         box-shadow: 0 0 5px #55FF55;
@@ -423,10 +423,10 @@ body {
     }
 
     #event-area {
-        grid-column: 2 / 3;
-        grid-row: 2 / 3;
+        grid-column: 2 / 2;
+        grid-row: 2 / 2;
         width: 100%;
-        height: 75vh;
+        height: auto;
         min-height: 150px;
         box-sizing: border-box;
         padding: 5px;
