--- a/style.css
+++ b/style.css
@@ -414,6 +414,7 @@ body {
         width: 100%;
         height: auto;
         min-height: 150px;
+        top: 0;
         border: 2px solid #55FF55;
         box-shadow: 0 0 5px #55FF55;
         background: url('assets/space-00.jpg') no-repeat center/cover, rgba(85, 255, 85, 0.1);
@@ -428,6 +429,7 @@ body {
         width: 100%;
         height: auto;
         min-height: 150px;
+        top: 0;
         box-sizing: border-box;
         padding: 5px;
         position: relative;
